--- a/templates.adoc
+++ b/templates.adoc
@@ -4,7 +4,7 @@
 In this lab, we're going to deploy a complete backend application, consisting of
 an REST API backend and a mongo database. The complete application will already
 be wired together and described as a backend for the map visualization tool, so
-that once the application is build and deployed, you will be able to see the new
+that once the application is built and deployed, you will be able to see the new
 map.
 
 image::roadshow-app-architecture-mlbparks.png[Application architecture,800,align="center"]
@@ -25,9 +25,7 @@ The great thing about *Templates* is that they can speed up the deployment
 workflow for application development by providing a "recipe" of sorts that can
 be deployed with a single command.  Not only that, they can be loaded into
 OpenShift from an external URL, which will allow you to keep your templates in a
-version control system. And, even further, they can be stored in a version
-control system (even in the same repository as the application source code) --
-they're just serialized text data!
+version control system. 
 
 Let's combine all of the exercises we have performed in the last several labs by
 using a *Template* that we can instantiate with a single command.  While we
@@ -77,7 +75,20 @@ mlbparks      Application template MLBParks backend running on {{MW_TEXT}} and u
 {% endif %}
 ----
 
-Are you ready for the magic command?  Here it is:
+In the web UI, you can see the templates you have in your project, by clicking on the 
+*"Add to project --> Select from project"* dropdown menu.
+
+image::template-from-project-menu.png[Select from project menu]
+
+You'll be presented with a list of templates local to your own project. You will see the template we just loaded.
+
+image::template-from-project.png[Local templates]
+
+Are you ready for the magic command?  
+
+Here it is!
+
+If you want to use command line:
 
 {% if USE_MAVEN %}
 [source,bash]
@@ -217,6 +228,17 @@ You will see the following output:
 {% endif %}
 {% endif %}
 
+Or if you prefer using the web UI, just click on the template we just saw:
+
+image::template-from-project-info.png[Template info]
+
+Then, you'll see a guided wizard showing you some information and allowing you to provide
+the desired configuration to instantiate the template
+
+image::template-from-project-config.png[Template config]
+
+Go ahead and click *"Create"*
+
 OpenShift will now:
 
 * Configure and start a build
@@ -239,6 +261,8 @@ several app servers, databases, and more.  You could deploy the entire set of
 resources with one command, and then hack on them to develop new features,
 microservices, fix bugs, and more.
 
+image::complete-overview.png[Complete overview]
+
 As a final exercise, look at the template that was used to create the
 resources for our *mlbparks* application.
 
@@ -250,3 +274,12 @@ $ oc get template mlbparks-py -o yaml
 $ oc get template mlbparks -o yaml
 {% endif %}
 ----
+
+But as always, you can use the OpenShift console to do the same. Under *"Resources menu"*, click on *"Other resources"*,
+then select *"Templates*" from teh dropdown, and select the *"Edit YAML"* action, on the *"Actions"* dropdown. 
+
+image::template-yaml-menu.png[Complete overview]
+
+You'll be able to see/edit the YAML as well from here.
+
+image::template-yaml-edit.png[Template YAML edit]
